fixed the FridgeInfo alignment and replaced w/ minecraft chest

--- a/src/components/FridgeInfo.css
+++ b/src/components/FridgeInfo.css
@@ -1,5 +1,5 @@
 .fridge-info-text {
-    margin-top: 6px;
+    margin-top: 8px;
     color: black;
 }
 
@@ -26,4 +26,10 @@
 .fridge-info-header {
     display: flex;
     flex-direction: row;
+}
+
+@media screen and (max-width: 1040px) {
+    .fridge-info-container {
+        padding-top: 30px;
+    }
 }
